--- a/index.html
+++ b/index.html
@@ -398,14 +398,14 @@ the homepageTemplate template is loaded into mainContentArea by default when the
 </div><!-- /bannerContainer -->
 
 
-	<div class='contentContainer'>
-
-		<ul id='homepageFeaturedItems' data-bind="var: category(@products); format: productList; editor: finder; extension: store_prodlist; loadsTemplate: productListTemplate; hide_multipage:1; before:<h2>Featured Items</h2>; withReviews:1;" class='listStyleNone fluidList clearfix noPadOrMargin productList'></ul>
+	
+		<div class='prodlistContainerReversed'>
 		
-		<p data-bind="var: page(description); format:wiki; wikiFormats:myRIA; editor: textarea;"></p>
-
-	</div>
-
+		<ul id='homepageFeaturedItems' data-bind="var: category(@products); format: productList; editor: finder; extension: store_prodlist; loadsTemplate: productListTemplate; hide_multipage:1; before:<h2 class='greyGradient marginBottom'>Featured Items</h2>; withReviews:1;" class='listStyleNone fluidList clearfix noPadOrMargin productList'></ul>
+		
+		</div>
+		
+		<p data-bind="var: page(description); format:wiki; wikiFormats:myRIA; editor: textarea; before:<div class='contentContainer'>; after:</div>;"></p>
 
 
 </div>
@@ -855,18 +855,11 @@ Intl. Express Mail – This mail service takes about 3-5 business days to arrive
 
 <!-- must be outside table, otherwise width goes way wide -->
 <div id='prodlistRelatedContainer'>
-	<ul id='prodlistRelated' class='listStyleNone fluidList clearfix noPadOrMargin productList' data-bind="var: product(zoovy:related_products); format:productList; extension:store_prodlist;loadsTemplate:productListTemplate;hide_multipage_controls:true;hide_multipage:true; before:<h2>Similar Items</h2>; withReviews:1;"></ul>
+	<ul id='prodlistRelated' class='listStyleNone fluidList clearfix noPadOrMargin productList' data-bind="var: product(zoovy:related_products); format:productList; extension:store_prodlist;loadsTemplate:productListTemplate;hide_multipage_controls:true;hide_multipage:true; before:<h2 class='greyGradient marginBottom'>Similar Items</h2>; withReviews:1;"></ul>
 </div>
 
-	<div id='prodTemplateRelatedCarousel' class='homeCarouselContainer'>
-		<div class='jCarouselLite clearfix'>
-			<ul id='homeProdSearchNew' class='productList' data-bind='var: elastic-native({"size":"25","mode":"elastic-native","filter":{"term":{"prod_name":"halo"}}}); format: productSearch; extension: myRIA; loadsTemplate: productListTemplateResults; before:<h2 class="greyGradient marginBottom">Similar Items (hard coded to halo right now)</h2>;'></ul>
-			<div class='nav'>
-			<a href="#" class="prev greenGradient">&#171;</a>
-			<a href="#" class="next greenGradient">&#187;</a>
-			</div>
-		</div>
-	</div>
+<!-- gets populated in an onCompletes if ugenre is set -->
+<div id='prodTemplateUgenreCarousel' class='homeCarouselContainer'></div>
 
 
 
