--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ the homepageTemplate template is loaded into mainContentArea by default when the
 	
 		<div class='prodlistContainerReversed'>
 		
-		<ul id='homepageFeaturedItems' data-bind="var: category(@products); format: productList; editor: finder; extension: store_prodlist; loadsTemplate: productListTemplate; hide_multipage:1; before:<h2 class='greyGradient marginBottom'>Featured Items</h2>; withReviews:1;" class='listStyleNone fluidList clearfix noPadOrMargin productList'></ul>
+		<ul id='homepageFeaturedItems' data-bind="var: category(@products); format: productList; editor: finder; extension: store_prodlist; loadsTemplate: productListTemplate; hide_multipage:1; before:<h2 class='greyGradient marginBottom'>Featured Items</h2>; withInventory:1; withVariations:1;" class='listStyleNone fluidList clearfix noPadOrMargin productList'></ul>
 		
 		</div>
 		
