--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ $(this).closest('.subcatContainer').css({'left':'-9999px'}); setTimeout(function
 
 		</div>
 		
-		<div class='section'>
+		<div class='section columnFour'>
 			<span class='spriteBG faceBook pointer'>facebook</span>
 		</div>
 	</div>
@@ -401,9 +401,9 @@ the homepageTemplate template is loaded into mainContentArea by default when the
 
 
 	
-		<div class='prodlistContainerReversed'>
+		<div class='prodlistContainerReversed clearfix'>
 		
-		<ul id='homepageFeaturedItems' data-bind="var: category(@products); format: productList; editor: finder; extension: store_prodlist; loadsTemplate: productListTemplate; hide_multipage:1; before:<h2 class='greyGradient marginBottom'>Featured Items</h2>; withInventory:1; withVariations:1;" class='listStyleNone fluidList clearfix noPadOrMargin productList'></ul>
+		<ul id='homepageFeaturedItems' data-bind="var: category(@products); format: productList; editor: finder; extension: store_prodlist; loadsTemplate: productListTemplate; hide_multipage:1; before:<h2 class='greyGradient marginBottom'>Featured Items</h2>; withInventory:1; withVariations:1;" class='listStyleNone fluidList noPadOrMargin productList'></ul>
 		
 		</div>
 		
@@ -437,7 +437,7 @@ don't modify the 'data-templateid' unless you are changing template names and up
 		<ul data-bind="var: category(@subcategoryDetail); format: subcategoryList; extension: myRIA; loadsTemplate: categoryListTemplate; className:marginTop marginBottom;" class='listStyleNone fluidList clearfix noPadOrMargin noUnderline categoryList'></ul>
 	</div>
 
-	<ul id='categoryPageProdlist' data-bind="var: category(@products); format: productList; editor: finder; extension: store_prodlist; loadsTemplate: productListTemplate; withReviews:1; withInventory:1; withVariations:1;" class='listStyleNone fluidList clearfix noPadOrMargin productList'></ul>
+	<ul id='categoryPageProdlist' data-bind="var: category(@products); format: productList; editor: finder; extension: store_prodlist; loadsTemplate: productListTemplate; withReviews:1; withInventory:1; withVariations:1; items_per_page:60;" class='listStyleNone fluidList clearfix noPadOrMargin productList'></ul>
 	
 	<p data-bind="var: page(description2); format:wiki; wikiFormats:myRIA; editor: textarea;"></p>
 
@@ -688,7 +688,7 @@ this will likely become more flexible in the future. ###
 	<div class='prodViewerReviewSummary marginBottom cleafix'>
 		<span data-bind='var: reviews(average); format:addClass; className:review_;' class='reviewSprite'></span>
 		<span data-bind='var: reviews(total); format:text;pretext: (;posttext: reviews); className:numReviews;'></span>
-		<span><a href='#' onClick='app.ext.store_crm.u.showReviewFrmInModal({"pid":$(this).parent().attr("data-pid"),"templateID":"reviewFrmTemplate"}); return false;'>Write Review</a></span>
+		<span><a href='#' onClick='app.ext.store_crm.u.showReviewFrmInModal({"pid":$(this).closest(["data-pid"]).attr("data-pid"),"templateID":"reviewFrmTemplate"}); return false;'>Write Review</a></span>
 	</div>
 
 	<div class='priceContainer clearfix'>
@@ -1433,9 +1433,9 @@ So the cart template should contain these two elements and the extension should 
 		<td>
 <div class="cartStockContainer">
 	<div data-bind="var: product(full_product.is:user6); format:addClass; className:soldOut spriteBG;"></div>
-	<div data-bind="var: product(full_product.is:user4); format:addClass; className:backorder spriteBG;" onClick="$('#invMessage_is_backorder').dialog({width:'60%','modal':'true',autoOpen:false}); $('#invMessage_is_backorder').dialog('open');"></div>
+	<div data-bind="var: product(full_product.is:user4); format:addClass; className:backorder spriteBG pointer;" onClick="$('#invMessage_is_backorder').dialog({width:'60%','modal':'true',autoOpen:false}); $('#invMessage_is_backorder').dialog('open');"></div>
 	<div data-bind="var: product(full_product.is:preorder); format:addClass; className:preorder spriteBG;"></div>
-	<div data-bind="var: product(full_product.is:specialorder); format:addClass; className:specialorder spriteBG;"  onClick="$('#invMessage_is_specialorder').dialog({width:'60%','modal':'true',autoOpen:false}); $('#invMessage_is_specialorder').dialog('open');"></div>
+	<div data-bind="var: product(full_product.is:specialorder); format:addClass; className:specialorder spriteBG pointer;"  onClick="$('#invMessage_is_specialorder').dialog({width:'60%','modal':'true',autoOpen:false}); $('#invMessage_is_specialorder').dialog('open');"></div>
 
 	<div class='inStock spriteBG'></div>
 </div>
