update cross selling
Product detail page will now show a list of items that share the
prod_type attribute as well as prod_genre. May want to point genre
searches at prod_theme later.

--- a/index.html
+++ b/index.html
@@ -861,7 +861,8 @@ Intl. Express Mail – This mail service takes about 3-5 business days to arrive
 </div>
 
 <!-- gets populated in an onCompletes if ugenre is set -->
-<div id='prodTemplateUgenreCarousel'></div>
+<div id='prodTemplateUgenreCarousel' class='clearfix carouselParent'></div>
+<div id='prodTemplateTypeCarousel' class='clearfix carouselParent'></div>
 
 
 
