--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ $(this).closest('.subcatContainer').css({'left':'-9999px'}); setTimeout(function
 				<div class='clearfix' id='subcats_genreanime_categories'>
 				<h6>Anime by Category</h6>
 				</div>
+				</li>
 			</ul>
 		</div>
 		</li>
@@ -156,14 +157,17 @@ $(this).closest('.subcatContainer').css({'left':'-9999px'}); setTimeout(function
 		<li><a href='#category?navcat=.genre.cartoon_categories' class='topCat'>Cartoons<span class='spriteBG'></span></a>
 		<div class='subcatListContainer'>
 			<ul class="child_menu subcatContainer ">
-				<li class='col1'>
+				<li>
+				<div class='clearfix topRow'>
 				<h6>Cartoon by Series</h6>
 					<a href='#category?navcat=.genre.cartoon_merchandise' class='bindByAnchor'>Cartoon A-G</a>
 					<a href='#category?navcat=.genre.cartoon_series_h-n' class='bindByAnchor'>Cartoon H-N</a>
 					<a href='#category?navcat=.genre.cartoon_series_n-z' class='bindByAnchor'>Cartoon O-Z</a>
-				</li>
-				<li class='col2' id='subcats_genrecartoon_categories'>
+				</div>
+				<hr />
+				<div class='clearfix' id='subcats_genrecartoon_categories'>
 				<h6>Cartoon by Category</h6>
+				</div>
 				</li>
 			</ul>
 		</div>
@@ -252,7 +256,7 @@ $(this).closest('.subcatContainer').css({'left':'-9999px'}); setTimeout(function
 	</div>
 	
 	<div class='searchBar'>
-		<div class='shopByCatContainer spriteBG' onClick="$('#shopByCategoriesList').dialog({width:'90%',height:500,'modal':'true',autoOpen:false}).dialog('open');"></div>
+		<div class='shopByCatContainer spriteBG' onClick="$('#shopByCategoriesList').dialog({width:'90%',height:($(window).height() - 200),'modal':'true',autoOpen:false}).dialog('open');"></div>
 		
 		<div class='searchContainer'>
 <form id='headerSearchFrm' name='headerSearchFrm' action='#' class='productSearchForm' method="get">
@@ -611,7 +615,7 @@ remember to NOT put the button inside the 'onclick' container or two events will
 		
 		
 		<div class='priceContainer' data-bind='var:product(pid);format:assignAttribute; attribute:data-pid;'>
-			<span class='marginRight lineThrough' data-bind='var: product(prod_msrp); format:money; currencySign: $;  hideZero:true;'></span>
+<!--			<span class='marginRight lineThrough' data-bind='var: product(prod_msrp); format:money; currencySign: $;  hideZero:true;'></span> -->
 			<h6 class='marginLeft basePrice' data-bind='var: product(base_price);  format:elasticMoney; currencySign: $;  hideZero:true;'></h6>
 
 			
@@ -695,8 +699,7 @@ this will likely become more flexible in the future. ###
 		
 		<h4 class='basePrice floatLeft marginRight' data-bind='var: product(zoovy:base_price); format:money; currencySign: $;  hideZero:true;'></h4>
 		
-		<h5 class='prodMSRP floatLeft marginLeft lineThrough' data-bind='var: product(zoovy:prod_msrp); format:money; currencySign: $;  hideZero:true; pretext: Retail: ;'></h5>
-		
+				
 	</div>
 	
 	
@@ -895,7 +898,6 @@ Intl. Express Mail – This mail service takes about 3-5 business days to arrive
 	
 	<div class='priceContainer'>
 		<h4 class='basePrice' data-bind='var: product(zoovy:base_price); format:money; currencySign: $;  hideZero:true; pretext: Our Price: ;'></h4>
-		<h5 class='prodMSRP' data-bind='var: product(zoovy:prod_msrp); format:money; currencySign: $;  hideZero:true; pretext: MSRP: ;'></h5>
 		<span class='savings'>
 			<span class='savingsDifference' data-bind='var: product(pid); format:priceRetailSavingsDifference; extension:myRIA; pretext: You save: ;'></span>
 			<span class='savingsPercentage' data-bind='var: product(pid); format:priceRetailSavingsPercentage; extension:myRIA; pretext: (; posttext:);'></span>
@@ -903,7 +905,24 @@ Intl. Express Mail – This mail service takes about 3-5 business days to arrive
 	</div>
 	
 	<div data-bind='var: product(zoovy:ship_latency); format:text;pretext:Normally ships in ;posttext: day(s);' class='latency'></div>
+
+	<form data-bind='var: product(pid); format:atcForm; extension:store_product;' class='prodViewerAddToCartForm' id='prodQuickViewAddToCartFrm' action='#' onSubmit="app.ext.myRIA.u.handleAddToCart(this.id,{'action':'modal'});  return false;">
 	
+		<fieldset data-bind='var: product(pid); format:atcVariations; extension:store_product;' class='borderNone'></fieldset>
+		
+		
+		<div class='clearfix'>
+		
+		
+		<fieldset data-bind='var: product(pid); format:atcQuantityInput; extension:store_product; pretext:Quantity: ;' class='borderNone qtyInput floatLeft marginRight'></fieldset>
+
+		<input type='submit' value='Add to Cart' class='floatLeft marginLeft ui-button ui-button-text ui-corner-all ui-state-default addToCartButton displayNone' data-bind='var: product(pid); format:addToCartButton; extension:store_product;' id='addToCartBtn' />
+	
+		
+		</div>
+		
+	</form>
+
 	<section id='prodViewerReviewSummary' class='marginBottom'>
 		<span data-bind='var: reviews(average); format:addClass; className:review_;' class='reviewSprite'></span>
 		<span data-bind='var: reviews(total); format:text;posttext: from ;posttext: reviews; className:numReviews;'></span>
