--- a/index.html
+++ b/index.html
@@ -98,12 +98,22 @@ app.u.loadScript(app.vars.baseURL+"gkworld_init.js");
 <a href='#company?show=contact' class='bindByAnchor'>Contact</a> 
 		</span>
 
-		<span class='section socialIcons'>
+		<!-- <span class='section socialIcons'>
 <span class='spriteBG facebook'>Facebook</span>
 <span class='spriteBG googleplus'>Google Plus</span>
 <span class='spriteBG pinterest'>Pinterest</span>
-		</span>
-		
+		</span>  -->
+<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+<a class="addthis_button_preferred_1"></a>
+<a class="addthis_button_preferred_2"></a>
+<a class="addthis_button_preferred_3"></a>
+<a class="addthis_button_preferred_4"></a>
+<a class="addthis_button_compact"></a>
+<a class="addthis_counter addthis_bubble_style"></a>
+</div>
+<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+<script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-50a5613e47d0487c"></script>
+<!-- AddThis Button END -->
 	</div>
 </div>
 
