socail icons pass two

--- a/index.html
+++ b/index.html
@@ -103,14 +103,17 @@ app.u.loadScript(app.vars.baseURL+"gkworld_init.js");
 <span class='spriteBG googleplus'>Google Plus</span>
 <span class='spriteBG pinterest'>Pinterest</span>
 		</span>  -->
-<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+<span class='section'>
+<!-- AddThis Button BEGIN -->
+<span class="addthis_toolbox addthis_default_style ">
 <a class="addthis_button_preferred_1"></a>
 <a class="addthis_button_preferred_2"></a>
 <a class="addthis_button_preferred_3"></a>
 <a class="addthis_button_preferred_4"></a>
 <a class="addthis_button_compact"></a>
 <a class="addthis_counter addthis_bubble_style"></a>
-</div>
+</span>
+</span>
 <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
 <script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-50a5613e47d0487c"></script>
 <!-- AddThis Button END -->
@@ -315,7 +318,9 @@ $(this).closest('.subcatContainer').css({'left':'-9999px'}); setTimeout(function
 		</div>
 		
 		<div class='section columnFour'>
+		<!-- 
 			<span class='spriteBG faceBook pointer'>facebook</span>
+		-->
 		</div>
 	</div>
 	<div class='afterFooter clearfix'>
