--- a/index.html
+++ b/index.html
@@ -103,19 +103,14 @@ app.u.loadScript(app.vars.baseURL+"gkworld_init.js");
 <span class='spriteBG googleplus'>Google Plus</span>
 <span class='spriteBG pinterest'>Pinterest</span>
 		</span>  -->
-<span class='section'>
 <!-- AddThis Button BEGIN -->
-<span class="addthis_toolbox addthis_default_style ">
-<a class="addthis_button_preferred_1"></a>
-<a class="addthis_button_preferred_2"></a>
-<a class="addthis_button_preferred_3"></a>
-<a class="addthis_button_preferred_4"></a>
-<a class="addthis_button_compact"></a>
-<a class="addthis_counter addthis_bubble_style"></a>
-</span>
-</span>
-<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
-<script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-50a5613e47d0487c"></script>
+<div class="addthis_toolbox addthis_default_style ">
+<a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+<a class="addthis_button_tweet"></a>
+<a class="addthis_button_pinterest_pinit"></a>
+<a class="addthis_counter addthis_pill_style"></a>
+</div>
+<script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=xa-50aa8186202d83e8"></script>
 <!-- AddThis Button END -->
 	</div>
 </div>
