--- a/index.html
+++ b/index.html
@@ -103,15 +103,14 @@ app.u.loadScript(app.vars.baseURL+"gkworld_init.js");
 <span class='spriteBG googleplus'>Google Plus</span>
 <span class='spriteBG pinterest'>Pinterest</span>
 		</span>  -->
+		
 <!-- AddThis Button BEGIN -->
-<div class="addthis_toolbox addthis_default_style ">
-<a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-<a class="addthis_button_tweet"></a>
-<a class="addthis_button_pinterest_pinit"></a>
-<a class="addthis_counter addthis_pill_style"></a>
-</div>
-<script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=xa-50aa8186202d83e8"></script>
+<span class='section socialIcons'>
+<a class="addthis_button" href="http://www.addthis.com/bookmark.php?v=300&amp;pubid=xa-50aa833d60ad63aa"><img src="http://s7.addthis.com/static/btn/v2/lg-share-en.gif" width="125" height="16" alt="Bookmark and Share" style="border:0"/></a>
+<script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=xa-50aa833d60ad63aa"></script>
+</span>
 <!-- AddThis Button END -->
+
 	</div>
 </div>
 
