--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ app.u.loadScript(app.vars.baseURL+"gkworld_init.js");
 	<div class='contentWidth'>
 		
 		<span class='section'>
-<a href='#customer?show=lists' class='bindByAnchor'>Wish List</a> | 
+<!-- <a href='#customer?show=lists' class='bindByAnchor'>Wish List</a> | -->
 <a href='#customer?show=myaccount' class='bindByAnchor'>My Account</a> | 
 <a href='#customer?show=newsletter' class='bindByAnchor'>Register</a> | 
 <a href='#company?show=contact' class='bindByAnchor'>Contact</a> 
@@ -532,7 +532,7 @@ the text will also be added. if no text is desired, use CSS
 -->	
 		<button data-bind='var: product(pid); format:addToCartButton; extension:store_prodlist;' class='hbSpriteBG' id='addToCartBtn'></button>
 	</form>
-		<div><a href='#' onClick="app.ext.myRIA.a.add2BuyerList({pid:$(this).parent().attr('data-pid'),'listid':'wishlist'}); return false;">Add to Wishlist</a></div>
+		<!-- <div><a href='#' onClick="app.ext.myRIA.a.add2BuyerList({pid:$(this).parent().attr('data-pid'),'listid':'wishlist'}); return false;">Add to Wishlist</a></div>  -->
 
 
 </li>
@@ -638,7 +638,7 @@ remember to NOT put the button inside the 'onclick' container or two events will
 		</div>
 	</div>
 	
-	<div><a href='#' onClick="app.ext.myRIA.a.add2BuyerList({pid:$(this).closest('[data-pid]').attr('data-pid'),'listid':'wishlist'}); return false;">Add to Wishlist</a></div>
+	<!-- <div><a href='#' onClick="app.ext.myRIA.a.add2BuyerList({pid:$(this).closest('[data-pid]').attr('data-pid'),'listid':'wishlist'}); return false;">Add to Wishlist</a></div>  -->
 
 </li>
 </ul>
@@ -745,11 +745,11 @@ this will likely become more flexible in the future. ###
 
 
 	
-	<menu data-bind='var:product(pid);format:assignAttribute; attribute:data-pid;' id='CRMButtonMenu'>
+	<!-- <menu data-bind='var:product(pid);format:assignAttribute; attribute:data-pid;' id='CRMButtonMenu'>
 
-	<button class='ui-button ui-button-text ui-corner-all ui-state-default' onClick="app.ext.myRIA.a.add2BuyerList({pid:$(this).parent().attr('data-pid'),'listid':'wishlist'}); return false;">Add to Wishlist</button>
+	<<button class='ui-button ui-button-text ui-corner-all ui-state-default' onClick="app.ext.myRIA.a.add2BuyerList({pid:$(this).parent().attr('data-pid'),'listid':'wishlist'}); return false;">Add to Wishlist</button>
 
-	</menu>
+	</menu>  -->
 
 
 	<div class="addthis_toolbox addthis_default_style ">
@@ -1149,7 +1149,7 @@ adding classes is not likely to have any bad effects.
 		<li><a href='#customer?show=myaccount' id='navLink_myaccount'>My Account</a></li>
 		<li><a href='#customer?show=changepassword' id='navLink_changepassword'>Change Password</a></li>
 		<li><a href='#customer?show=orders' id='navLink_orders'>Order History</a></li>
-		<li><a href='#customer?show=lists' id='navLink_orders'>Manage Lists</a></li>
+		<!-- <li><a href='#customer?show=lists' id='navLink_orders'>Manage Lists</a></li>  -->
 	</ul>
 	</nav>
 	</div>
