update to go live

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@ var myCreole;
 
 
 var app = {vars:{
-	"release":"20121024084200",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
+	"release":"20121120105400",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
 	"baseURL":"",
-	"httpsURL":"https://secure.gkworld.com/s=app.gkworld.com/",
-	"httpURL":"http://app.gkworld.com/"
+	"httpsURL":"https://secure.gkworld.com/s=www.gkworld.com/",
+	"httpURL":"http://www.gkworld.com/"
 	},u:{}};
 
 //set base url so images, css, js, etc all load from appropriate location once deployed.
