--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ var myCreole;
 var app = {vars:{
 	"release":"20121120105400",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
 	"baseURL":"",
-	"httpsURL":"https://secure.gkworld.com/s=www.gkworld.com/",
-	"httpURL":"http://www.gkworld.com/"
+	"httpsURL":"https://secure.gkworld.com/s=app.gkworld.com/",
+	"httpURL":"http://app.gkworld.com/"
 	},u:{}};
 
 //set base url so images, css, js, etc all load from appropriate location once deployed.
